// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogTitle is rendered correctly to match the snapshot default 1`] = `
.emotion-0 {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0:hover {
  color: hsla(60, 72%, 60%);
}

.emotion-2 {
  font-size: 2.2rem;
}

.emotion-4 {
  margin-left: 0.5rem;
  font-size: 1.7rem;
}

<ThemeProvider
  theme={
    Object {
      "color": Object {
        "blue": Object {
          "base": "hsla(212, 72%, 60%)",
          "dark": "hsla(212, 72%, 50%)",
          "dark2": "hsla(212, 72%, 40%)",
          "dark3": "hsla(212, 72%, 30%)",
          "dark4": "hsla(212, 72%, 20%)",
          "light": "hsla(212, 72%, 70%)",
          "light2": "hsla(212, 72%, 80%)",
          "light3": "hsla(212, 72%, 90%)",
        },
        "border": Object {
          "primary": "hsla(0, 0%, 50%)",
          "primaryLight": "hsla(0, 0%, 75%)",
        },
        "green": Object {
          "base": "hsla(148, 72%, 60%)",
          "dark": "hsla(148, 72%, 50%)",
          "dark2": "hsla(148, 72%, 40%)",
          "dark3": "hsla(148, 72%, 30%)",
          "dark4": "hsla(148, 72%, 20%)",
          "light": "hsla(148, 72%, 70%)",
          "light2": "hsla(148, 72%, 80%)",
          "light3": "hsla(148, 72%, 90%)",
        },
        "primary": "hsla(212, 72%, 60%)",
        "primaryDark": "hsla(212, 72%, 50%)",
        "primaryLight": "hsla(212, 72%, 70%)",
        "text": Object {
          "accent": "hsla(148, 72%, 50%)",
          "primary": "hsla(0, 0%, 15%)",
          "primaryLight": "hsla(0, 0%, 40%)",
          "secondary": "hsla(212, 72%, 40%)",
        },
        "yellow": Object {
          "base": "hsla(60, 72%, 60%)",
          "dark": "hsla(60, 72%, 50%)",
          "dark2": "hsla(60, 72%, 40%)",
          "dark3": "hsla(60, 72%, 30%)",
          "dark4": "hsla(60, 72%, 20%)",
          "light": "hsla(60, 72%, 70%)",
          "light2": "hsla(60, 72%, 80%)",
          "light3": "hsla(60, 72%, 90%)",
        },
      },
    }
  }
>
  <BlogTitle
    subtitle="Test Subtitle"
    title="Test Title"
  >
    <Link
      href="/"
      passHref={true}
    >
      <LogoWrapperAnchor
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <a
          className="emotion-0 emotion-1"
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <Logo
            subtitle="Test Subtitle"
            title="Test Title"
          >
            <TitleSpan>
              <span
                className="emotion-2 emotion-3"
              >
                Test Title
              </span>
            </TitleSpan>
            <SubtitleSpan>
              <span
                className="emotion-4 emotion-5"
              >
                Test Subtitle
              </span>
            </SubtitleSpan>
          </Logo>
        </a>
      </LogoWrapperAnchor>
    </Link>
  </BlogTitle>
</ThemeProvider>
`;

exports[`BlogTitle is rendered correctly to match the snapshot when set linkToTopPage option to false 1`] = `
.emotion-0 {
  font-size: 2.2rem;
}

.emotion-2 {
  margin-left: 0.5rem;
  font-size: 1.7rem;
}

<ThemeProvider
  theme={
    Object {
      "color": Object {
        "blue": Object {
          "base": "hsla(212, 72%, 60%)",
          "dark": "hsla(212, 72%, 50%)",
          "dark2": "hsla(212, 72%, 40%)",
          "dark3": "hsla(212, 72%, 30%)",
          "dark4": "hsla(212, 72%, 20%)",
          "light": "hsla(212, 72%, 70%)",
          "light2": "hsla(212, 72%, 80%)",
          "light3": "hsla(212, 72%, 90%)",
        },
        "border": Object {
          "primary": "hsla(0, 0%, 50%)",
          "primaryLight": "hsla(0, 0%, 75%)",
        },
        "green": Object {
          "base": "hsla(148, 72%, 60%)",
          "dark": "hsla(148, 72%, 50%)",
          "dark2": "hsla(148, 72%, 40%)",
          "dark3": "hsla(148, 72%, 30%)",
          "dark4": "hsla(148, 72%, 20%)",
          "light": "hsla(148, 72%, 70%)",
          "light2": "hsla(148, 72%, 80%)",
          "light3": "hsla(148, 72%, 90%)",
        },
        "primary": "hsla(212, 72%, 60%)",
        "primaryDark": "hsla(212, 72%, 50%)",
        "primaryLight": "hsla(212, 72%, 70%)",
        "text": Object {
          "accent": "hsla(148, 72%, 50%)",
          "primary": "hsla(0, 0%, 15%)",
          "primaryLight": "hsla(0, 0%, 40%)",
          "secondary": "hsla(212, 72%, 40%)",
        },
        "yellow": Object {
          "base": "hsla(60, 72%, 60%)",
          "dark": "hsla(60, 72%, 50%)",
          "dark2": "hsla(60, 72%, 40%)",
          "dark3": "hsla(60, 72%, 30%)",
          "dark4": "hsla(60, 72%, 20%)",
          "light": "hsla(60, 72%, 70%)",
          "light2": "hsla(60, 72%, 80%)",
          "light3": "hsla(60, 72%, 90%)",
        },
      },
    }
  }
>
  <BlogTitle
    linkToTopPage={false}
    subtitle="Test Subtitle"
    title="Test Title"
  >
    <Logo
      subtitle="Test Subtitle"
      title="Test Title"
    >
      <TitleSpan>
        <span
          className="emotion-0 emotion-1"
        >
          Test Title
        </span>
      </TitleSpan>
      <SubtitleSpan>
        <span
          className="emotion-2 emotion-3"
        >
          Test Subtitle
        </span>
      </SubtitleSpan>
    </Logo>
  </BlogTitle>
</ThemeProvider>
`;
